fixed header alignment

--- a/assets/css/3-sections/_header.scss
+++ b/assets/css/3-sections/_header.scss
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
   border: 5px solid #000;
 
   a {
     color: $header-text;
     text-decoration: none;
+    padding: 0 10px;
+
 
     &:hover, &:active {
       color: $header-hover;
@@ -16,8 +19,7 @@
 
 .logo {
   display: flex;
-  justify-content: flex-start;
-  margin: 0;
+  margin-right: auto;
   padding: 0;
   color: black;
 }
@@ -34,7 +36,6 @@
   border: 5px solid #924545;
 
     .svg-social {
-      margin-left: 20px;
       padding: 0;
       stroke: none;
       stroke-width: 1;
